kuber/2.3/nginx-multitool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-volume
          mountPath: /usr/share/nginx/html/index.html # Mount as a file
          subPath: index.html # Specify the key from the ConfigMap        
      - name: app-1
        image: wbitt/network-multitool
      volumes:
      - name: nginx-index-volume
        configMap:
          name: nginx-custom-index # Reference the ConfigMap name
