kuber/2.3/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 8080
      targetPort: 80
