kuber/2.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: public #nginx
  defaultBackend:
    service:
      name: frontend-svc
      port:
        number: 8080
  rules:
  - host: "frontend.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 8080
  tls:
  - hosts: ["frontend.example.com"]
    secretName: ingress-tls-secret
